src/components/VueWindow/VueWindow.scss
.vue-window {
	&__button {
		display: grid;
		place-items: center;
		backdrop-filter: blur(8px);
		cursor: pointer;
		border: 1px solid var(--gray-9);

		border-radius: 2rem;
		background-color: oklch(from var(--gray-8) l c h / 0.5);
		padding: 2rem;
	}

	&__dialog[open] {
		display: flex;
		flex-direction: column;
		margin: auto;
		border: 1px solid var(--gray-9);
		border-radius: 1rem;
		background-color: var(--gray-8);

		padding: 0;

		width: clamp(52.875rem, 50.8315rem + 10.2174vw, 58.75rem);
		max-width: calc(100vw - 2rem);

		color: var(--color-text);

		@supports (backdrop-filter: none) or (color: rgb(255, 255, 255)) {
			background-color: oklch(from var(--gray-8) l c h / 0.75);
			&::backdrop {
				backdrop-filter: blur(16px);
			}
		}

		&.expand {
			width: calc(100dvw - 2rem);
			height: calc(100dvh - 2rem);
		}
	}
}

.header {
	display: flex;
	position: relative;
	justify-content: space-between;
	gap: 0.5rem;
	margin: 0.75rem 1rem 0;
	border-bottom: 1px dashed var(--teal-7);
	padding-bottom: 0.75rem;

	&__window-control {
		display: flex;
		align-items: center;
		gap: 0.5rem;

		.button {
			opacity: 0.75;
			box-shadow: 2px 2px 8px 0 var(--gray-9);
			border-width: 0;
			border-radius: 200vmax;
			background-color: var(--yellow-5);
			padding: 0.25rem;

			width: max-content;
			height: max-content;

			&:first-of-type {
				background-color: var(--red-8);
			}
			&:last-of-type {
				background-color: var(--teal-8);
			}
			svg {
				width: 1rem;
				height: 1rem;
			}
		}
	}

	&__tabs {
		display: flex;
		flex-wrap: wrap;
		gap: 1rem;

		.button {
			&.active {
				border-color: var(--teal-6);
				color: var(--teal-6);
			}
		}
	}
}

